[gd_scene load_steps=15 format=3 uid="uid://bmu0dxoyu6hfu"]

[ext_resource type="Script" path="res://scenes/stores/titan_dog/titan_dog.gd" id="2_hyw7l"]
[ext_resource type="Texture2D" uid="uid://cbpf7qaaatvee" path="res://scenes/stores/titan_dog/titan_dog.png" id="3_m7cvs"]
[ext_resource type="PackedScene" uid="uid://yg61w87455ho" path="res://scenes/common/finite_state_machine/FSM.tscn" id="3_yn7ow"]
[ext_resource type="Script" path="res://scenes/stores/titan_dog/MoveState.gd" id="4_7wf1n"]
[ext_resource type="Texture2D" uid="uid://whf5eqdonrk0" path="res://resources/icons/pngwing.com.png" id="6_dp2pm"]
[ext_resource type="Script" path="res://scenes/characters/die_state.gd" id="8_17gyd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b7xt6"]
resource_local_to_scene = true
size = Vector2(0, 0)

[sub_resource type="Animation" id="Animation_gwlt8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterAnimation/Character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8csog"]
resource_name = "attack"
length = 0.500017
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterAnimation/Character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [9, 10, 11]
}

[sub_resource type="Animation" id="Animation_g7218"]
resource_name = "idle"
length = 0.500017
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterAnimation/Character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_18yy2"]
resource_name = "knockback"
length = 0.500017
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterAnimation/Character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}

[sub_resource type="Animation" id="Animation_t17j0"]
resource_name = "move"
length = 1.33337
loop_mode = 1
step = 0.333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterAnimation/Character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.666667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p6yas"]
_data = {
"RESET": SubResource("Animation_gwlt8"),
"attack": SubResource("Animation_8csog"),
"idle": SubResource("Animation_g7218"),
"knockback": SubResource("Animation_18yy2"),
"move": SubResource("Animation_t17j0")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f0hp4"]
resource_local_to_scene = true
size = Vector2(596, 682)

[node name="TitanDog" type="CharacterBody2D" node_paths=PackedStringArray("attack_sprite") groups=["characters", "dogs"]]
collision_layer = 2
collision_mask = 17
input_pickable = true
script = ExtResource("2_hyw7l")
name_id = "titan_dog"
speed = 100
attack_sprite = NodePath("CharacterAnimation/Character")
health = 10000

[node name="DanmakuHitbox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DanmakuHitbox"]
shape = SubResource("RectangleShape2D_b7xt6")

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="CharacterAnimation" type="Node2D" parent="."]

[node name="Character" type="Sprite2D" parent="CharacterAnimation"]
texture = ExtResource("3_m7cvs")
hframes = 3
vframes = 3
region_rect = Rect2(4, 4, 178, 185)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p6yas")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
position = Vector2(68, 29)
shape = SubResource("RectangleShape2D_f0hp4")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(366, 280)
target_position = Vector2(40, 5)
collision_mask = 20

[node name="FiniteStateMachine" parent="." instance=ExtResource("3_yn7ow")]
initial_state = NodePath("MoveState")

[node name="MoveState" type="Node" parent="FiniteStateMachine"]
script = ExtResource("4_7wf1n")

[node name="TimeToDie" type="Timer" parent="FiniteStateMachine/MoveState"]
wait_time = 30.0
one_shot = true

[node name="DieState" type="Node" parent="FiniteStateMachine"]
script = ExtResource("8_17gyd")

[node name="Arrow" type="TextureProgressBar" parent="."]
visible = false
offset_left = 21.0
offset_top = -184.0
offset_right = 741.0
offset_bottom = 222.0
rotation = 1.5708
scale = Vector2(0.1, 0.1)
size_flags_horizontal = 4
size_flags_vertical = 6
nine_patch_stretch = true
texture_under = ExtResource("6_dp2pm")
texture_progress = ExtResource("6_dp2pm")
tint_under = Color(1, 0, 0, 1)
tint_progress = Color(1, 1, 0, 1)

[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
[connection signal="timeout" from="FiniteStateMachine/MoveState/TimeToDie" to="FiniteStateMachine/MoveState" method="_on_time_to_die_timeout"]
